tests/ui/type-alias-impl-trait/different_lifetimes_defining_uses.stderr
error: concrete type differs from previous defining opaque type use
  --> $DIR/different_lifetimes_defining_uses.rs:17:5
   |
LL |     b
   |     ^ expected `&'a u32`, got `&'b u32`
   |
note: previous use here
  --> $DIR/different_lifetimes_defining_uses.rs:12:5
   |
LL |     a
   |     ^

error: aborting due to previous error

